--- a/p.html
+++ b/p.html
@@ -10,6 +10,8 @@
       padding: 10px;
       margin: 50px auto;
       text-align: center;
+      background-image: url('1.png');
+      background-size: cover;
     }
     #photo {
       width: 100px;
@@ -17,6 +19,19 @@
       border: 1px solid #000;
       margin: 0 auto;
       margin-bottom: 10px;
+      background-image: url('default_photo.png'); /* Default photo */
+      background-size: cover;
+    }
+    #signature {
+      width: 150px;
+      height: 50px;
+      border: 1px solid #000;
+      margin: 10px auto;
+      background-image: url('default_signature.png'); /* Default signature */
+      background-size: cover;
+    }
+    #details {
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -26,32 +41,103 @@
     <div id="name">John Doe</div>
     <div id="age">30 years</div>
     <div id="gender">Male</div>
-    <div id="signature">Signature</div>
+    <div id="signature"></div>
+    <div id="details">
+      <button onclick="editName()">Edit Name</button>
+      <button onclick="editAge()">Edit Age</button>
+      <button onclick="editGender()">Edit Gender</button>
+      <button onclick="updatePhoto()">Update Photo</button>
+      <button onclick="updateSignature()">Update Signature</button>
+      <button onclick="updateBackground()">Update Background</button>
+    </div>
   </div>
   <button onclick="captureScreenshot()">Capture Screenshot</button>
 
+  <!-- Include the html2canvas library -->
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
   <script>
+    function updateDetails() {
+      const name = document.getElementById('name');
+      const age = document.getElementById('age');
+      const gender = document.getElementById('gender');
+
+      // Update details with user input (you can use prompt or any other input method)
+      const newName = prompt('Enter new name:', name.textContent);
+      if (newName !== null && newName !== '') {
+        name.textContent = newName;
+      }
+
+      const newAge = prompt('Enter new age:', age.textContent);
+      if (newAge !== null && newAge !== '') {
+        age.textContent = newAge;
+      }
+
+      const newGender = prompt('Enter new gender:', gender.textContent);
+      if (newGender !== null && newGender !== '') {
+        gender.textContent = newGender;
+      }
+    }
+
+    function editName() {
+      const name = document.getElementById('name');
+      const newName = prompt('Enter new name:', name.textContent);
+      if (newName !== null && newName !== '') {
+        name.textContent = newName;
+      }
+    }
+
+    function editAge() {
+      const age = document.getElementById('age');
+      const newAge = prompt('Enter new age:', age.textContent);
+      if (newAge !== null && newAge !== '') {
+        age.textContent = newAge;
+      }
+    }
+
+    function editGender() {
+      const gender = document.getElementById('gender');
+      const newGender = prompt('Enter new gender:', gender.textContent);
+      if (newGender !== null && newGender !== '') {
+        gender.textContent = newGender;
+      }
+    }
+
+    function updatePhoto() {
+      const photo = document.getElementById('photo');
+      const newPhotoUrl = prompt('Enter URL for new photo:');
+      if (newPhotoUrl !== null && newPhotoUrl !== '') {
+        photo.style.backgroundImage = `url(${newPhotoUrl})`;
+      }
+    }
+
+    function updateSignature() {
+      const signature = document.getElementById('signature');
+      const newSignatureUrl = prompt('Enter URL for new signature:');
+      if (newSignatureUrl !== null && newSignatureUrl !== '') {
+        signature.style.backgroundImage = `url(${newSignatureUrl})`;
+      }
+    }
+
+    function updateBackground() {
+      const idCard = document.getElementById('id-card');
+      const newBackgroundUrl = prompt('Enter URL for new background:');
+      if (newBackgroundUrl !== null && newBackgroundUrl !== '') {
+        idCard.style.backgroundImage = `url(${newBackgroundUrl})`;
+      }
+    }
+
     function captureScreenshot() {
       const cardElement = document.getElementById('id-card');
 
-      // Create a canvas element to draw the card
-      const canvas = document.createElement('canvas');
-      canvas.width = cardElement.offsetWidth;
-      canvas.height = cardElement.offsetHeight;
-      const ctx = canvas.getContext('2d');
-
-      // Draw the card on the canvas
-      const cardImage = new Image();
-      cardImage.src = 'data:image/svg+xml,' + encodeURIComponent(new XMLSerializer().serializeToString(cardElement));
-      cardImage.onload = function () {
-        ctx.drawImage(cardImage, 0, 0, cardElement.offsetWidth, cardElement.offsetHeight);
-
+      // Use html2canvas library to capture the screenshot
+      html2canvas(cardElement).then(function(canvas) {
         // Create a temporary link to download the image
         const link = document.createElement('a');
         link.download = 'id_card_screenshot.png';
         link.href = canvas.toDataURL();
         link.click();
-      };
+      });
     }
   </script>
 </body>
